--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="api.html">API</a>
+              <a class="nav-link" href="api.php">API</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Proyecto</a>
