--- a/site/api.html
+++ b/site/api.html
@@ -1,7 +1,7 @@
 <?php
     include ("database//conexion.php");
     include ("database//funciones.php");
-    //NOMBRE LUGAR KEVIN TU PARTE
+    //NOMBRE LUGAR, kevin
     $nombrelug="Plaza de Armas";
     $indice=indiceLugar($nombrelug);
     if ($indice==0)    $nombrelug="No se encuentra el sitio. Lo sentimos";
