--- a/site/index.html
+++ b/site/index.html
@@ -96,7 +96,7 @@
     <div class="container justify-content-center">
       <div class="row">
         <div class="container col-2">
-          <a href="api.html" class="btn btn-outline-success btn-lg btn-block" role="button" aria-pressed="true">IR</a>
+          <a href="api.php" class="btn btn-outline-success btn-lg btn-block" role="button" aria-pressed="true">IR</a>
         </div>  
       </div> 
     </div>
